<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_8">

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry"
                android:text="@string/begin_date"/>

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@android:drawable/ic_menu_my_calendar"/>
                <EditText
                    android:id="@+id/etbegin_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Begin Date"
                    android:textStyle="bold"
                    android:textSize="@dimen/customEntry"
                    android:inputType="date" />
            </LinearLayout>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry"
                android:text="Sort Order:"/>

            <Spinner
                android:id="@+id/mySpinner"
                android:layout_marginTop="@dimen/padding_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/order_array"/>

            <TextView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/customEntry"
                android:text="News Desk:"/>

            <CheckBox
                android:id="@+id/ckArt"
                android:text="@string/arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ckFashion"
                android:text="@string/fashion_and_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <CheckBox
                android:id="@+id/ckSports"
                android:text="@string/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <LinearLayout
                android:gravity="right"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/filter_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"/>


            </LinearLayout>

</LinearLayout>